# bunny-cdn-python-sdk

./: .gitignore  .mise.toml  BUILD.md  CHANGELOG.md  CLAUDE.md  README.md  prek.toml  pyproject.toml  tox.ini
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  dependabot-lock-file.yml  prek-hooks.yml  publish.yml  security.yml  test.yml
.planning/: HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/phases/01-package-scaffold-exception-hierarchy/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-UAT.md
.planning/phases/02-base-client-infrastructure/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  task3-verification.py
.planning/phases/03-core-and-storage-api-clients/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md
.planning/phases/04-test-suite/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-UAT.md
.planning/phases/05-quality-and-coverage/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md
.planning/phases/06-retrytransport/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-RESEARCH.md
.planning/phases/07-constructor-integration/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-CONTEXT.md  07-UAT.md
.planning/phases/08-cli-scaffold/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-RESEARCH.md  08-REVIEW-FIX.md  08-REVIEW.md  08-SECURITY.md  08-UAT.md  08-VERIFICATION.md
.planning/phases/09-output-layer-error-handling/: 09-01-PLAN.md  09-01-SUMMARY.md  09-CONTEXT.md  09-REVIEW-FIX.md  09-REVIEW.md  09-VERIFICATION.md
.planning/phases/10-coreclient-sub-apps/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  10-03-SUMMARY.md  10-04-PLAN.md  10-04-SUMMARY.md  10-05-PLAN.md  10-05-SUMMARY.md  10-06-PLAN.md  10-06-SUMMARY.md  10-CONTEXT.md  10-DISCUSSION-LOG.md  10-VERIFICATION.md
.planning/phases/11-storageclient-sub-app/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-RESEARCH.md  11-UAT.md
.planning/phases/12-utility-commands-integration/: 12-01-PLAN.md  12-01-SUMMARY.md  12-02-PLAN.md  12-02-SUMMARY.md  12-CONTEXT.md  12-REVIEW-FIX.md  12-REVIEW.md  12-SECURITY.md  12-UAT.md
.planning/phases/13-version-metadata/: 13-01-PLAN.md  13-01-SUMMARY.md  13-02-PLAN.md  13-02-SUMMARY.md  13-03-PLAN.md  13-03-SUMMARY.md  VERIFICATION.md
.planning/phases/14-tox-local-quality-gates/: .continue-here.md  14-01-PLAN.md  14-01-SUMMARY.md  14-02-PLAN.md  14-02-SUMMARY.md  14-RESEARCH.md  14-REVIEW.md  14-VERIFICATION.md
.planning/quick/260410-p0m-fix-init-py-type-checking-guard-make-cor/: 260410-p0m-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: HLD.md
src/bunny_cdn_sdk/: __init__.py  _client.py  _exceptions.py  _pagination.py  _retry.py  _types.py  core.py  storage.py
src/bunny_cdn_sdk/cli/: __init__.py  _app.py  _dns_zone.py  _output.py  _pull_zone.py  _storage.py  _storage_zone.py  _video_library.py
tests/: conftest.py  test_client_lifecycle.py  test_constructor_retry.py  test_core.py  test_exceptions.py  test_public_surface.py  test_retry.py  test_storage.py  test_version.py
tests/cli/: conftest.py  test_app.py  test_billing.py  test_dns_zone.py  test_pull_zone.py  test_purge.py  test_stats.py  test_storage.py  test_storage_zone.py  test_video_library.py
