[project]
name = "bunny-cdn-sdk"
version = "2.1.4"
description = "Python SDK for the Bunny CDN API"
readme = "README.md"
authors = [
    { name = "Todd Jacobsen", email = "yolabingo@users.noreply.github.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["bunny", "cdn", "bunnycdn", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/yolabingo/bunny-cdn-python-sdk"
Repository = "https://github.com/yolabingo/bunny-cdn-python-sdk"
"Bug Tracker" = "https://github.com/yolabingo/bunny-cdn-python-sdk/issues"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[project.optional-dependencies]
cli = [
    "typer>=0.12.0,<1",
    "rich>=13.0.0",
]

[project.scripts]
bunnycdn = "bunny_cdn_sdk.cli:app"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "audit" },
    "poethepoet>=0.44.0",
    "prek>=0.3.9",
]
lint = ["ruff", "ty"]
test = ["pytest", "pytest-cov", "pytest-xdist"]
audit = ["twine"]

[tool.poe.tasks]
install  = { cmd = "uv sync --all-groups --all-extras", help = "Install all dev dependencies and optional extras" }
lint     = { cmd = "prek run --all-files", help = "Run prek hooks (ruff, file/secret checks)" }
fix      = { cmd = "prek run --all-files", help = "Auto-fix issues (alias for lint — prek auto-fixes)" }
type     = { cmd = "ty check src/", help = "Type-check src/ with ty" }
test     = { cmd = "pytest -n auto --cov-fail-under=80", help = "Run tests in parallel (80% coverage required)" }
test-cov = { cmd = "pytest -n auto --cov=bunny_cdn_sdk --cov-report=html --cov-report=term", help = "Generate HTML coverage report in htmlcov/" }
build    = { cmd = "uv build", help = "Build wheel and sdist into dist/" }
clean    = { cmd = "rm -rf build/ dist/ *.egg-info .pytest_cache .coverage .ruff_cache .ty_cache htmlcov/", help = "Remove build artifacts and caches" }
dist     = { sequence = ["clean", "build"], help = "Clean then build distribution packages" }
ci       = { sequence = ["lint", "type", "test"], help = "Run all CI checks (lint + type + test)" }

# Version management (uses 'uv version' to edit pyproject.toml)
version       = { cmd = "uv version", help = "Show current package version" }
version-patch = { cmd = "uv version --bump patch", help = "Bump patch version (X.Y.Z+1)" }
version-minor = { cmd = "uv version --bump minor", help = "Bump minor version (X.Y+1.0)" }
version-major = { cmd = "uv version --bump major", help = "Bump major version (X+1.0.0)" }

# Release: commit current version bump, tag, and build (run AFTER version-*)
release.help  = "Commit version bump, tag v<version>, and build dist/ (run after version-*)"
release.shell = """
  set -e
  version=$(uv version --short)
  if git diff --quiet pyproject.toml; then
    echo "✗ pyproject.toml is unchanged — bump version first (e.g. 'uv run poe version-patch')"
    exit 1
  fi
  git commit -m "chore: release v$version" pyproject.toml uv.lock 2>/dev/null || git commit -m "chore: release v$version" pyproject.toml
  git tag "v$version"
  rm -rf build/ dist/ *.egg-info
  uv build
  echo ""
  echo "✓ Released v$version"
  echo "  Push with: git push --follow-tags"
"""

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "ISC001", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"src/bunny_cdn_sdk/cli/**" = ["TRY003", "FBT001", "FBT002", "FBT003", "PLR0913", "PLC0415", "A002", "B008", "TC001"]
"src/bunny_cdn_sdk/core.py" = ["A002"]  # id param matches Bunny API surface (API fidelity)
"src/bunny_cdn_sdk/storage.py" = ["PLR0913"]  # StorageClient.__init__ signature matches API surface
"tests/**" = [
    "ANN",       # type annotations not required in tests
    "ARG",       # unused arguments common in handler stubs
    "S101",      # assert is expected in pytest tests
    "SLF001",    # private member access is normal in unit tests
    "PLR2004",   # magic values are readable in test assertions
    "SIM117",    # nested with statements are fine in tests
    "B017",      # pytest.raises(Exception) acceptable in broad tests
    "PT011",     # broad pytest.raises acceptable in tests
    "PT012",     # pytest.raises with multi-statement block needed for sdk_errors() context manager pattern
    "RUF100",    # noqa directives may reference rules suppressed above
    "N806",      # MockClient variable naming — standard mock pattern
    "PLC0415",   # imports inside test bodies are common
    "TC",        # typing-only import checks not required in tests
    "EM",        # exception message style not enforced in tests — inline strings are readable
    "TRY003",    # exception message length not enforced in tests
]

[tool.pytest.ini_options]
addopts = ["--cov=bunny_cdn_sdk"]

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
possibly-unresolved-reference = "error"
unused-ignore-comment = "warn"
